--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
-title: Your Page Title
+title: AI for bioscripting
+description: >
+  A hands-on exercise to explore the use of generative AI for writing scripts
+  to analyze biological datasets.
+
+author: Jacques van Helden  
+author_url: https://orcid.org/0000-0002-4516-6509
+
 theme: jekyll-theme-minimal
