--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+
 title: AI for bioscripting
 description: >
   A hands-on exercise to explore the use of generative AI for writing scripts
@@ -7,3 +8,5 @@ author: Jacques van Helden
 author_url: https://orcid.org/0000-0002-4516-6509
 
 theme: jekyll-theme-minimal
+custom_css: assets/css/style.css
+
