--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ description: >
 author: Jacques van Helden  
 author_url: https://orcid.org/0000-0002-4516-6509
 
-theme: jekyll-theme-minimal-mistakes
+theme: jekyll-theme-minimal
